# Vision-App

./: .env  .gitignore  Datenschutz-Gutachten-Vision-App.md  Datenschutz-Kurzinfo.md  README.md  ReleaseGuide.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: tauri-build.yml
src/: App.tsx  firebase.ts  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: deeplink.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src/app/: App.tsx  router.tsx  styles.css
src/app/layout/: Sidebar.tsx  Topbar.tsx
src/components/: AccountChip.tsx  AppShell.tsx  CornerPlaceholder.tsx  FirebaseLoginDialog.tsx  LoginView.tsx  MainCard.tsx  PageLoader.tsx  SideIcons.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/home/: HomePage.tsx
src/features/profile/: ProfilePage.tsx  profileStore.ts  types.ts
src/features/profile/components/: AchievementBadges.tsx  ActivityTimeline.tsx  EditableField.tsx  OverviewTab.tsx  ProfileAvatar.tsx  ProfileBanner.tsx  ProfileHeader.tsx  ProfileTabs.tsx  ProjectsTab.tsx  SocialLinks.tsx  StatsGrid.tsx  index.ts
src/features/projects/: ProjectDetailPage.tsx  ProjectsPage.tsx  mockProjects.ts  projectsStore.ts  types.ts
src/features/services/: ServicesPage.tsx
src/features/settings/: SettingsPage.tsx
src/features/tools/: ToolsPage.tsx
src/shared/hooks/: usePreload.ts
src/shared/theme/: ThemeProvider.tsx  index.ts  themeStore.ts  useTheme.ts
src/shared/utils/: external.ts
